--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <small style="font-size: 15px;">Friedrich Schiller: Die Jungfrau von Orleans</small>
     </p>
 
-    <p id="display-text-2" class="display-text" style="margin-bottom: 60px; line-height: 1.2;">
+    <p id="display-text-2" class="display-text">
         Dieses Bühnenmodell im Maßstab 1:30 wurde im Kurs "Inszenierte Räume" bei Natalia Stachon angefertigt.<br>
         Es ist inspiriert von einem Ausschnitt aus Friedrich Schillers "Die Jungfrau von Orleans".<br>
         Das AR-Modell soll helfen, die originalen Maßstäbe des Entwurfs zu veranschaulichen.<br>
