--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
             height: 50vh;
             margin-bottom: 20px;
         }
-        model-viewer button#ar-button {
-            display: none !important;
+     
         }
         .custom-ar-button {
             background-color: black;
@@ -54,7 +53,7 @@
             text-align: center;
             margin-bottom: 30px;
             color: white;
-            text-decoration: underline;
+            
         }
         .display-text {
             text-align: center;
@@ -107,7 +106,7 @@
     </style>
 </head>
 <body>
-    <h1 class="headline">Eine Hand Hand voll leichten Staub</h1>
+    <h1 class="headline">Eine Hand Hand voll leichten Staubs</h1>
 
     <model-viewer id="model-viewer"
                   src="Buehne.glb"
@@ -142,7 +141,7 @@
     </p>
 
     <p id="display-text-2" class="display-text" style="margin-bottom: 60px; line-height: 1.8;">
-        Dieses Bühnenmodell im Maßstab 1:30 wurde im Kurs "Inszenierte Räume" bei Natalia Stachon angefertigt.<br>
+        Dieses Bühnenmodell im Maßstab 1:30 wurde im Kurs "Inszenierte Räume" bei Proffesorin Natalia Stachon angefertigt.<br>
         Es ist inspiriert von einem Ausschnitt aus Friedrich Schillers "Die Jungfrau von Orleans".<br>
         Das AR-Modell soll helfen, die originalen Maßstäbe des Entwurfs zu veranschaulichen.<br>
         Um die bestmögliche Erfahrung mit dem Modell zu ermöglichen, wird empfohlen, es im Freien oder in einem großen Raum zu präsentieren.<br>
@@ -156,7 +155,7 @@
     </a>
 
     <!-- Ensure the audio element is correctly defined -->
-    <audio id="audio-player" src="your-audio-file.mp3"></audio>
+    <audio id="audio-player" src="Buehneaudio.mp3"></audio>
 
     <script>
         document.getElementById('play-button').addEventListener('click', function() {
