--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </style>
 </head>
 <body>
-    <h1 class="headline">Eine Hand Hand voll leichten Staubs</h1>
+    <h1 class="headline">Eine Hand voll leichten Staubs</h1>
 
     <model-viewer id="model-viewer"
                   src="Buehne.glb"
