--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
     </p>
 
     <p id="display-text-2" class="display-text" style="margin-bottom: 60px; line-height: 1.8;">
-        Dieses Bühnenmodell im Maßstab 1:30 wurde im Kurs "Inszenierte Räume" bei Professorin Natalia Stachon angefertigt.<br>
+        Dieses Projekt entstand im Kurs: Experimente in 3d (SoSe24) von Aram Bartholl
+        Das dargestellte Bühnenmodell im Maßstab 1:30 wurde im Kurs "Inszenierte Räume" bei Professorin Natalia Stachon angefertigt.<br>
         Es ist inspiriert von einem Ausschnitt aus Friedrich Schillers "Die Jungfrau von Orleans".<br>
         Das AR-Modell soll helfen, die originalen Maßstäbe des Entwurfs zu veranschaulichen.<br>
         Um die bestmögliche Erfahrung mit dem Modell zu ermöglichen, wird empfohlen, es im Freien oder in einem großen Raum zu präsentieren.<br>
